tests/unit/errors/test10.js
// Console.log sin parentesis inicial

console.log(1);
console.log1);
console.log(1);
console.log(1);
console.log(1);
console.log(1);